--- a/minutes/12_03議事録.md
+++ b/minutes/12_03議事録.md
@@ -3,10 +3,10 @@
 ## ヘッダー
 |項目|内容|
 |:--:|:--:|
-| 日時 | 2016/07/22  9:00 ~ 12:10|
-| 参加者 | A，B，C，D，E |
+| 日時 | 2016/12/03  13:40 ~ :|
+| 参加者 | 赤坂,山田 |
 | 会議種別 | 定期会議 |
-| 場所 | ○大：○○、○大：○○ |
+| 場所 | 室工大V棟3階 |
 
 ---
 ## 目次
@@ -20,24 +20,20 @@
 ---
 
 ## <div id="anchar1"/>自己紹介
-- A
-	- 未来大M1
-	- PBL経験あり
-	- 現在○○プロジェクトに参画中
-	- その他開発経験など
-- B
-	- 未来大M1
+- 赤坂健介	
+	- 室工大M1
+	- PBL経験なし	
+	- 数理科学研究室所属	
+	- c言語のみ
+- 山田貴也	
+	- 室工大M1
 	- PBL経験あり 
 	- その他開発経験など
-- C
-	- 室工大M2
-	- PBL経験なし
-	- その他開発経験など
 
-	　　︙
+	　　
 
 ## <div id="anchar2"/>アプリアイデア
-1. 地図アプリ
+1. 筋トレアプリ
 	- ○○に特化している
 	- 類似した既存サービス
 		- ○○
