--- a/minutes/12_03議事録.md
+++ b/minutes/12_03議事録.md
@@ -4,14 +4,14 @@
 |項目|内容|
 |:--:|:--:|
 | 日時 | 2016/12/03  13:40 ~ :|
-| 参加者 | 赤坂,山田 |
+| 参加者 | 赤坂健介,山田貴也 |
 | 会議種別 | 定期会議 |
 | 場所 | 室工大V棟3階 |
 
 ---
 ## 目次
 1. [自己紹介](#anchar1)
-2. [アプリアイデア](#anchar2)
+2. [アプリ](#anchar2)
 3. [次回の予定](#anchar3)
 
 ### 今日の成果物 
@@ -32,7 +32,7 @@
 
 	　　
 
-## <div id="anchar2"/>アプリアイデア
+## <div id="anchar2"/>アプリ
 1. 筋トレアプリ
 	- ○○に特化している
 	- 類似した既存サービス
@@ -48,14 +48,11 @@
 ## <div id="anchar3"/>次回の予定
 |項目|内容|
 |:--:|:--:|
-| 日時 | 2016/07/29  9:00 ~ 12:10|
-| 予定内容 | アイデアのブレストなど |
+| 日時 | 2016/12/10  ? ~ ?|
+| 予定内容 | 進捗状況の報告など |
 
 ### 担当タスク
 | メンバー | 担当タスク | 予定進捗 |
 | :-- | :--: | :-- |
-| A | issue #1 | 完了 |
-| B | issue #1 | 完了 |
-| C | issue #1 | 着手 |
-| D | issue #1 | 完了 |
-| E | issue #1 | 完了 |
+| 赤坂健介 | issue #1 | 完了 |
+| 山田貴也 | issue #1 | 完了 |
