--- a/minutes/12_03議事録.md
+++ b/minutes/12_03議事録.md
@@ -10,12 +10,12 @@
 
 ---
 ## 目次
-1. [自己紹介](#anchar1)
-2. [アプリ](#anchar2)
-3. [次回の予定](#anchar3)
+1. [自己紹介]
+2. [アプリ]
+3. [次回の予定]
 
 ### 今日の成果物 
-- ブレスト図　URL : http://○○
+- 
 
 ---
 
@@ -33,16 +33,12 @@
 	　　
 
 ## <div id="anchar2"/>アプリ
-1. 筋トレアプリ
-	- ○○に特化している
-	- 類似した既存サービス
-		- ○○
+1. 筋トレ補助アプリ
+	- 最大回数×kgから，回数に応じたkgを表示させる
+	- 
+		
 	 
-2. ライフログ
-	- ○○に特化している
-	- 類似した既存サービス
-		- ○○
-3. ○○
+
 
 
 ## <div id="anchar3"/>次回の予定
