--- a/minutes/12_03議事録.md
+++ b/minutes/12_03議事録.md
@@ -3,7 +3,7 @@
 ## ヘッダー
 |項目|内容|
 |:--:|:--:|
-| 日時 | 2016/12/03  13:40 ~ :|
+| 日時 | 2016/12/03  13:40 ~ 19:00 |
 | 参加者 | 赤坂健介,山田貴也 |
 | 会議種別 | 定期会議 |
 | 場所 | 室工大V棟3階 |
@@ -15,8 +15,9 @@
 3. [次回の予定]
 
 ### 今日の成果物 
-- 
-
+- Android StudioとGithubの導入と組織の作成
+- 開発するアプリの方向性の決定
+	-	
 ---
 
 ## <div id="anchar1"/>自己紹介
@@ -35,8 +36,7 @@
 ## <div id="anchar2"/>アプリ
 1. 筋トレ補助アプリ
 	- 最大回数×kgから，回数に応じたkgを表示させる
-	- 
-		
+	- などなど		
 	 
 
 
