--- a/minutes/12_03議事録.md
+++ b/minutes/12_03議事録.md
@@ -10,11 +10,12 @@
 
 ---
 ## 目次
-1. [自己紹介]
-2. [アプリ]
-3. [次回の予定]
+1. [今日の成果]
+2. [自己紹介]
+3. [アプリ]
+4. [次回の予定]
 
-### 今日の成果物 
+## 今日の成果
 - Android StudioとGithubの導入と組織の作成
 - 開発するアプリの方向性の決定
 	-	
