--- a/minutes/12_03議事録.md
+++ b/minutes/12_03議事録.md
@@ -10,16 +10,10 @@
 
 ---
 ## 目次
-1. [今日の成果]
-2. [自己紹介]
+1. [自己紹介]
+2. [今日の成果]
 3. [アプリ]
 4. [次回の予定]
-
-## 今日の成果
-- Android StudioとGithubの導入と組織の作成
-- 開発するアプリの方向性の決定
-	-	
-
 
 ## <div id="anchar1"/>自己紹介
 - 赤坂健介	
@@ -32,6 +26,14 @@
 	- PBL経験あり 
 	- その他開発経験など
 
+
+## 今日の成果
+- Android StudioとGithubの導入と組織の作成
+	-Gitコマンドの確認
+	-組織の作成
+	-Android StudioとGithubの連携
+- 開発するアプリの方向性の決定
+	-	
 	　　
 
 ## <div id="anchar2"/>アプリ
