--- a/minutes/12_03議事録.md
+++ b/minutes/12_03議事録.md
@@ -34,25 +34,29 @@
 	- Android StudioとGithubの連携
 	
 - 開発するアプリの方向性の決定
-	-	
+   - 筋トレ補助アプリ
+	- 重量あたりの挙上回数から，○RMの重量を表示（画面１）
+        - メインセットを決定すると，ウォームアップからメニューを推薦（画面２）
 	　　
 
 ## <div id="anchar2"/>アプリ
 1. 筋トレ補助アプリ
-	- 最大回数×kgから，回数に応じたkgを表示させる
-	- などなど		
-	 
+   - 重量あたりの挙上回数から，○RMの重量を表示（画面１）
+   - メインセットを決定すると，ウォームアップからメニューを推薦（画面２）
+2. レイアウトイメージ
+   - 
 
-
-
-## <div id="anchar3"/>次回の予定
-|項目|内容|
+## <div id="anchar3"/>今後の予定
+|日時|内容|
 |:--:|:--:|
-| 日時 | 2016/12/10  ? ~ ?|
-| 予定内容 | 進捗状況の報告など |
+| 2016/12/10 | 進捗状況の報告、次週予定の決定 |
+| 2016/12/31 | 一連の挙動実装完了|
 
 ### 担当タスク
 | メンバー | 担当タスク | 予定進捗 |
 | :-- | :--: | :-- |
 | 赤坂健介 | issue #1 | 完了 |
+||画面１のレイアウト作成||
 | 山田貴也 | issue #1 | 完了 |
+||画面２のレイアウト作成||
+
