--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,29 +1,29 @@
 <resources>
     <string name="app_name">MITmuscle</string>
-    <string name="edit_kg">重量(kg)を入力.</string>
+    <string name="edit_kg">重量を入力</string>
     <string name="sub_name">recommend_set</string>
 
     <string-array name="Numberlist">
-        <item>1回</item>
-        <item>2回</item>
-        <item>3回</item>
-        <item>4回</item>
-        <item>5回</item>
-        <item>6回</item>
-        <item>7回</item>
-        <item>8回</item>
-        <item>9回</item>
-        <item>10回</item>
-        <item>11回</item>
-        <item>12回</item>
-        <item>13回</item>
-        <item>14回</item>
-        <item>15回</item>
-        <item>16回</item>
-        <item>17回</item>
-        <item>18回</item>
-        <item>19回</item>
-        <item>20回</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
     </string-array>
 
 </resources>
