--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Reps max and sets program</string>
-    <string name="edit_kg">重量を入力</string>
+    <string name="edit_kg">Weight</string>
     <string name="sub_name">Warm up sets</string>
     <string name="act_name">Main sets</string>
+    <string name="edit_RM">Rep</string>
 
     <string-array name="Numberlist">
         <item>1</item>
